--- a/Data cleaning.ipynb
+++ b/Data cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,9 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
-    "from datetime import timedelta"
+    "from datetime import timedelta\n",
+    "from statsmodels.formula.api import ols\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
@@ -1084,9 +1086,6 @@
     }
    ],
    "source": [
-    "from statsmodels.formula.api import ols\n",
-    "import statsmodels.api as sm\n",
-    "\n",
     "model = sm.OLS(y_train,X_train.astype(float)).fit()\n",
     "model.summary()"
    ]
