--- a/Mod2Project - Data Cleaning.ipynb
+++ b/Mod2Project - Data Cleaning.ipynb
@@ -24,15 +24,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import seaborn as sns\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from sklearn import metrics\n",
-    "# from scipy import stats\n",
-    "# from statsmodels.formula.api import ols\n",
-    "# import statsmodels.api as sm\n",
-    "# from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
-    "# from statsmodels.stats.multicomp import MultiComparison"
+    "import seaborn as sns"
    ]
   },
   {
